--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "migrate:make": "knex migrate:make --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts --knexpath ./src/exemplo/adaptadores/db/knex",
+     "migrate:down": "knex migrate:rollback --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts",
+     "migrate:up": "knex migrate:latest --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,9 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "knex": "^3.1.0",
+    "pg": "^8.13.2"
   }
 }
