--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest",
     "migrate:make": "knex migrate:make --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts --knexpath ./src/exemplo/adaptadores/db/knex",
-     "migrate:down": "knex migrate:rollback --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts",
-     "migrate:up": "knex migrate:latest --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts"
+    "migrate:down": "knex migrate:rollback --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts",
+    "migrate:up": "knex migrate:latest --knexfile ./src/exemplo/adaptadores/db/knex/knexfile.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
@@ -27,6 +28,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "knex": "^3.1.0",
-    "pg": "^8.13.2"
+    "pg": "^8.13.2",
+    "uuid": "^11.0.5"
   }
 }
